2022-08-27T08:27:57Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2938599183
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 48 617 / 49 633
* notice: next accum: outdated-unq outdated-all / unq all: 48 617 / 49 624
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -9 / +1 +16 -0 -9 / 1 7
* notice: removed / changed dates: [] / [2022-08-13]

2022-08-27T02:29:52Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2937678010
* notice: last 14d: unq all: 1 16
* notice: prev accum: outdated-unq outdated-all / unq all: 47 610 / 49 630
* notice: next accum: outdated-unq outdated-all / unq all: 48 617 / 49 633
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-12] / []

2022-08-26T16:32:47Z:
* notice: last 14d: unq all: 1 20
* notice: prev accum: outdated-unq outdated-all / unq all: 47 610 / 49 632
* notice: next accum: outdated-unq outdated-all / unq all: 47 610 / 49 630
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -2 / +1 +7 -0 -3 / 1 4
* notice: removed / changed dates: [] / [2022-08-12]

2022-08-26T08:29:38Z:
* notice: last 14d: unq all: 1 22
* notice: prev accum: outdated-unq outdated-all / unq all: 47 610 / 49 633
* notice: next accum: outdated-unq outdated-all / unq all: 47 610 / 49 632
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +7 -0 -1 / 1 6
* notice: removed / changed dates: [] / [2022-08-12]

2022-08-25T02:30:12Z:
* notice: last 14d: unq all: 1 23
* notice: prev accum: outdated-unq outdated-all / unq all: 46 609 / 49 633
* notice: next accum: outdated-unq outdated-all / unq all: 47 610 / 49 633
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-11] / []

2022-08-24T08:29:16Z: