@@ -1,10 +1,10 @@
 {
-  "count": 7,
+  "count": 1,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-08-13T00:00:00Z",
-      "count": 7,
+      "timestamp": "2022-10-06T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
