@@ -1,3 +1,11 @@
+2022-10-07T02:31:33Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3201837661
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 48 617 / 49 624
+* notice: next accum: outdated-unq outdated-all / unq all: 49 633 / 50 634
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-08-13] / [2022-10-06]
+
 2022-08-27T08:27:57Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2938599183
 * notice: last 14d: unq all: 1 7
